# home_lab

./: .gitignore
coding_challenges/: longest_brackets.py  palindrom.py  task.py
devops/: .bash_profile  .zshrc  bashing.py
devops/ansible_test/: setup-playbook.yml
devops/configs/: README.md
devops/useful_scripts/: backup_to_s3.sh  full_vacuum.sh  pull_all_images.sh  rebuild_compose.sh
js/learning/: test.html
js/my_keytrainer/: analyze.py  keyboard_trainer.html  keystrokes_full
langs/crystal/: crystal.cr
langs/haskell/: hello.hs
langs/nasm/: hello.asm
langs/nim/: test_nim.py
langs/perl/: test.pl
langs/rust/pyo3_test/: Cargo.toml  Justfile  test.py
langs/rust/pyo3_test/src/: lib.rs
langs/rust/test_lib/: Cargo.toml  Justfile  test_mod.py
langs/rust/test_lib/src/: lib.rs  main.rs
math_utils/: elections.py  game_theory.py
ml_algos/information_theory/: inf_funcs.py
ml_algos/models/: linear.py  ridge.py
ml_algos/neural/: ann.R  nlp.rst  test.py
optimization/: knapsack_test.py
optimization/SMT/: ex1.py
optimization/constraint_solving/: methods.rst
optimization/cvxpy_test/: lasso_tradeoffs.py  several_vars.py  test.py
optimization/gekko_test/: test.py
optimization/genetics/: my_genetics.py
optimization/google_or_test/: assingments.py  min_cost_flow.py
optimization/min_cost_flow/: readme.md
optimization/pyomo_test/: pyomo_simple_model.py  test.py
optimization/routes/: __init__.py  concorde_adapter.py  lkh_adapter.py  mtsp_solvers.py  (+4 more)
python/: codecs_test.py  utils.py
trash/: quick_tests.py  tash_note.ipynb  test.js
(+205 files in other folders)
