[package]
name = "pyo3_test"
version = "0.1.0"
authors = ["dimitrius <yampolskiydv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "union_find_py"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "*"
features = ["extension-module"]

[dependencies]
disjoint-sets = "*"
